@@ -1,3 +1,6 @@
+2008-07-06 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
+	* category.rb: raise 404 error when bot access to no existent diary.
+
 2008-07-04 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
 	* counter.rb: fix indent.
 
